--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.6",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "15.5.6",
