--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.5",
     "shadcn": "^3.4.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
