--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@libsql/client": "^0.15.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "lucide-react": "^0.546.0",
@@ -31,8 +32,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "contentlayer": "^0.3.4",
     "drizzle-kit": "^0.31.5",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
     "shadcn": "^3.4.2",
+    "shiki": "^3.13.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
