--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,29 @@
-version: '3.8'
+version: "3.8"
 
 services:
   donaldson-agency:
     build:
       context: .
       dockerfile: Dockerfile
-      network: host
+
+    # Do NOT use 'network: host' — use bridged Docker networking instead
     ports:
       - "3000:3000"
+
     environment:
       - NODE_ENV=production
+      - HOST=0.0.0.0               # Ensures Next.js listens on all interfaces
+      - PORT=3000
       - RESEND_API_KEY=${RESEND_API_KEY}
       - RESEND_FROM_EMAIL=${RESEND_FROM_EMAIL}
       - RESEND_TO_EMAIL=${RESEND_TO_EMAIL}
       - NEXT_PUBLIC_GA_MEASUREMENT_ID=${NEXT_PUBLIC_GA_MEASUREMENT_ID}
+
     restart: unless-stopped
+
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000"]
+      # 'curl' works in more environments than 'wget'
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
