updated google tag

--- a/.github/workflows/deploy-selfhosted.yml
+++ b/.github/workflows/deploy-selfhosted.yml
@@ -39,6 +39,9 @@ jobs:
           RESEND_FROM_EMAIL: ${{ secrets.RESEND_FROM_EMAIL }}
           RESEND_TO_EMAIL: ${{ secrets.RESEND_TO_EMAIL }}
           NEXT_PUBLIC_GA_MEASUREMENT_ID: ${{ secrets.NEXT_PUBLIC_GA_MEASUREMENT_ID }}
+          NEXT_PUBLIC_GOOGLE_ADS_CONTACT_LABEL: ${{ secrets.NEXT_PUBLIC_GOOGLE_ADS_CONTACT_LABEL }}
+          NEXT_PUBLIC_GOOGLE_ADS_PHONE_LABEL: ${{ secrets.NEXT_PUBLIC_GOOGLE_ADS_PHONE_LABEL }}
+          NEXT_PUBLIC_GOOGLE_ADS_EMAIL_LABEL: ${{ secrets.NEXT_PUBLIC_GOOGLE_ADS_EMAIL_LABEL }}
 
   deploy:
     name: Deploy to Server
