--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
       - RESEND_FROM_EMAIL=${RESEND_FROM_EMAIL}
       - RESEND_TO_EMAIL=${RESEND_TO_EMAIL}
       - NEXT_PUBLIC_GA_MEASUREMENT_ID=${NEXT_PUBLIC_GA_MEASUREMENT_ID}
+      - NEXT_PUBLIC_GOOGLE_ADS_CONTACT_LABEL=${NEXT_PUBLIC_GOOGLE_ADS_CONTACT_LABEL}
+      - NEXT_PUBLIC_GOOGLE_ADS_PHONE_LABEL=${NEXT_PUBLIC_GOOGLE_ADS_PHONE_LABEL}
+      - NEXT_PUBLIC_GOOGLE_ADS_EMAIL_LABEL=${NEXT_PUBLIC_GOOGLE_ADS_EMAIL_LABEL}
 
     restart: unless-stopped
 
