--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@libsql/client": "^0.15.15",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@react-email/render": "^2.0.0",
     "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "19.1.0",
-    "react-email": "^4.3.1",
+    "react-email": "^4.3.2",
     "resend": "^6.2.0",
     "tailwind-merge": "^3.3.1"
   },
