--- a/.github/workflows/deploy-selfhosted.yml
+++ b/.github/workflows/deploy-selfhosted.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   setup:
     name: Checkout and Setup
-    runs-on: [self-hosted, core-www-marketing-01]
+    runs-on: core-www-marketing-01
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
