--- a/.github/workflows/deploy-selfhosted.yml
+++ b/.github/workflows/deploy-selfhosted.yml
@@ -66,7 +66,7 @@ jobs:
     runs-on: [self-hosted, core-www-marketing-01]
     steps:
       - name: Pull and Restart Compose
-        working-directory: /opt/curas/
+        working-directory: /opt/agency/
         run: |
           docker compose pull
           docker compose up -d --remove-orphans
